--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,8 @@
     "mongoose": "^8.0.3",
     "dotenv": "^16.3.1",
     "jsonwebtoken": "^9.0.2",
-    "axios": "^1.6.2"
+    "axios": "^1.6.2",
+    "googleapis": "^129.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
