--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,3 +4,6 @@ GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_REDIRECT_URI=http://localhost:4000/auth/google/callback
 JWT_SECRET=
+OPENAI_API_KEY=
+LLM_PROVIDER=openai
+LLM_MODEL=gpt-4o-mini
