--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,9 @@
     "dotenv": "^16.3.1",
     "jsonwebtoken": "^9.0.2",
     "axios": "^1.6.2",
-    "googleapis": "^129.0.0"
+    "googleapis": "^129.0.0",
+    "openai": "^4.20.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
