--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,10 +17,9 @@
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
+    "sass": "^1.97.1",
     "typescript": "^5.3.3",
     "vite": "^5.0.8",
     "vite-plugin-static-copy": "^1.0.1"
   }
 }
-
-
