--- a/backend/package.json
+++ b/backend/package.json
@@ -2,19 +2,32 @@
   "name": "heyjarvis-backend",
   "version": "1.0.0",
   "description": "Backend for HeyJarvis with Google OAuth and JWT authentication",
-  "main": "dist/server.js",
+  "main": "dist/main.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "dev": "ts-node-dev --respawn --transpile-only src/main.ts",
     "build": "tsc",
-    "start": "node dist/server.js"
+    "start": "node dist/main.js",
+    "start:dev": "ts-node-dev --respawn --transpile-only src/main.ts",
+    "start:prod": "node dist/main.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
+    "@nestjs/common": "^10.3.0",
+    "@nestjs/core": "^10.3.0",
+    "@nestjs/platform-express": "^10.3.0",
+    "@nestjs/config": "^3.1.1",
+    "@nestjs/mongoose": "^10.0.2",
+    "@nestjs/passport": "^10.0.3",
+    "@nestjs/jwt": "^10.2.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "class-validator": "^0.14.0",
+    "class-transformer": "^0.5.1",
+    "reflect-metadata": "^0.1.14",
+    "rxjs": "^7.8.1",
     "mongoose": "^8.0.3",
-    "dotenv": "^16.3.1",
     "jsonwebtoken": "^9.0.2",
     "axios": "^1.6.2",
     "googleapis": "^129.0.0",
@@ -22,9 +35,9 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
     "@types/node": "^20.10.5",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/passport-jwt": "^4.0.1",
     "typescript": "^5.3.3",
     "ts-node-dev": "^2.0.0"
   }
